Change to us location

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,7 +12,7 @@ steps:
       - "--runtime=python310"
       - "--trigger-http"
       - "--entry-point=start_script"
-      - "--region=europe-west1"
+      - "--region=us-central1"
       - "--no-allow-unauthenticated"
       - "--max-instances=1"
       - "--timeout=120s"
@@ -31,7 +31,7 @@ steps:
       - "--runtime=python310"
       - "--trigger-topic=my-topic"
       - "--entry-point=start_script"
-      - "--region=europe-west1"
+      - "--region=us-central1"
       - "--no-allow-unauthenticated"
       - "--max-instances=1"
       - "--timeout=120s"
@@ -51,9 +51,9 @@ steps:
       - "github-func-a-scheduler"
       - "--schedule=0 4 * * *"
       - "--http-method=POST"
-      - "--uri=https://europe-west1-propane-nomad-396712.cloudfunctions.net/github-func-a"
+      - "--uri=https://us-central1-propane-nomad-396712.cloudfunctions.net/github-func-a"
       - '--message-body={"project_id": "propane-nomad-396712", "my_msg": "Hello World!"}'
       - "--headers=Content-Type=application/json"
       - "--attempt-deadline=1800s"
       - "--oidc-service-account-email=cloud-scheduler@propane-nomad-396712.iam.gserviceaccount.com"
-      - "--location=europe-west1"
+      - "--location=us-central1"
